# astra-kernelkit

./: .gitignore  CNAME  README.md  genindex.html  index.html  main.py  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg
_sources/tutorials/: concepts.rst
_sources/user_guide/: kernels.rst
_static/: documentation_options.js
astrapy/: __init__.py  algo.py  astra_compat.py  astrapy.py  data.py  geom.py  geom2d.py  geom3d.py  kernel.py  operator.py  process.py  processing.py  projector.py  raytrafo.py  torch_support.py
astrapy/cuda/: cone_bp.cu  cone_fp.cu  filter.cu
astrapy/geom/: __init__.py  proj.py  vol.py
astrapy/kernels/: __init__.py  cone_bp.py  cone_fp.py  conebeam.py  fanbeam.py  filter.py
docs/: conf.py  environment.yml  index.rst  refs.bib
example/: conebeam_fdk.py  conebeam_reflex.py  conebeam_sirt.py  find_bug.py
examples/: conebeam.py  conebeam_odl.py  conebeam_ramlak_test.py  conebeam_reflex.py  conebeam_simple.py  conebeam_sirt.py  fanbeam.py  fanbeam_astrapy_only.py  fanbeam_odl.py  fbp_cone_2d.py  flexray.py  tune.py
general/: about.html  install.html  tomography.html
kernelkit/: __init__.py  algo.py  data.py  experimental.py  kernel.py  operator.py  processing.py  projector.py  projector2d.py  toolbox_support.py  torch_support.py
kernels/: cone_fp.cu  fan_bp.cu  fan_fp.cu
reference/: api_summary.html
tests/: conftest.py  many_angles.py  test_all_kernels.py  test_astra_compat.py  test_conebeam.py  test_kernel.py  test_kernels.py  test_operator.py  test_projector.py  test_stream.py  test_toolbox.py
tutorials/: concepts.html
user_guide/: geometries.html  kernels.html  projectors.html
(+117 files in other folders)
