[metadata]
name = ASTRA KernelKit
version = attr: kernelkit.__version__
description = Customizable high-performance X-ray Tomography CUDA kernels
license = GPLv3
author = Adriaan Graas
keywords = ASTRA, CUDA, GPU, Tomography, CT, Reconstruction, KernelKit
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    cupy
    tqdm
    transforms3d
    jinja2
    numpy
;    scipy
;    matplotlib
zip_safe = True
include_package_data = True

[options.extras_require]
dev =
    numpydoc
    myst-parser
    pytest
    sphinx
    sphinx-book-theme

[options.package_data]
kernelkit = *.cu
* = README.md, LICENSE.md
