[metadata]
name = ASTRA KernelKit
version = attr: kernelkit.__version__
description = CuPy-based Projectors for Computed Tomography
license = GPLv3
author = Adriaan Graas
keywords = ASTRA, CUDA, GPU, Tomography, CT, Reconstruction, KernelKit
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
;    cupy
    tqdm
    transforms3d
    jinja2
    numpy
;    scipy
;    matplotlib
zip_safe = True
include_package_data = True

[options.extras_require]
dev =
    jupyter-sphinx
    numpydoc
    myst-parser
    pytest
    sphinx
    sphinx-book-theme
    sphinxcontrib-bibtex

[options.package_data]
kernelkit = *.cu
* = README.md, LICENSE.md
